--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
     <dependency>
    	  <groupId>org.dcache</groupId>
    	  <artifactId>nfs4j-core</artifactId>
-   	  <version>0.7.4</version>
+   	  <version>0.8.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
