--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>au.gov.nla</groupId>
   <artifactId>doss-nfsd</artifactId>
-  <version>1.0.5-SNAPSHOT</version>
+  <version>1.0.6</version>
   <packaging>jar</packaging>
 
   <name>doss-nfsd</name>
